# hm-ti

./: .gitignore  .nvim.lua  README.md  playground.py  pyproject.toml
data/: results.csv  sa_mean.csv  simulated_annealing.csv  vnd.csv  vnd_rounded.csv
docs/: relatório_1.tex  relatório_2.tex  relatório_3.tex
playground/: pyproject.toml
src/: app.py  helpers.py
src/algorithms/: __init__.py  algorithms.py  helpers.py  test_algorithms.py
